# fpga_gpu_hybrid_trading_system

./: README.md
cmake/: FindFPGA.cmake
python/: tain_model.py
src/: README.md  dma_controller.v  order_book.v  streaming_interface.v
src/cpu/: CMakeLists.txt  main.cpp  pipeline_manager.cpp  pipeline_manager.h
src/gpu/: CMakeLists.txt  gpu_interface.cpp  gpu_interface.h
src/gpu/kernels/: advanced_strategies.cu  prediction.cu  risk_check.cu
tests/: CMakeLists.txt  test_cpu.cpp  test_gpu.cu  test_integration.cpp
